crates/kaban-parser/tests/snapshots/statements__private_const_statement.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: const MY_NUMBER: i32 = 10;

Block [
    Const {
        is_pub: false,
        name: Identifier("MY_NUMBER"),
        type: Type(I32),
        assignment: IntLit("10"),
    },
]
