crates/kaban-parser/tests/snapshots/statements__private_enum_decl_with_type_assignments_and_generics.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: enum Day<T> {Sunday: i32, Monday: f64, Tuesday: T,}

Block [
    EnumDeclWithGeneric {
        is_pub: false,
        name: Identifier("Day"),
        generic_params: [
            GenericParam {
                name: Identifier("T"),
            },
        ],
        variant_decls: [
            EnumVariantDecl {
                variant_name: Identifier("Sunday"),
                type: Type(I32),
            },
            EnumVariantDecl {
                variant_name: Identifier("Monday"),
                type: Type(F64),
            },
            EnumVariantDecl {
                variant_name: Identifier("Tuesday"),
                type: NamedType(
                    Identifier("T"),
                ),
            },
        ],
    },
]
