crates/kaban-parser/tests/snapshots/statements__private_func_decl_with_generics_and_with_return_type_and_mut_values.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: func foo<T,>(mut x: T, y: f64,) -> T { let z = x + y; return z; }

Block [
    FuncDeclWithGeneric {
        is_pub: false,
        name: Identifier("foo"),
        params: [
            Param {
                binding: IdentifierBinding {
                    name: Identifier("x"),
                    mutable: true,
                },
                type: NamedType(
                    Identifier("T"),
                ),
            },
            Param {
                binding: IdentifierBinding {
                    name: Identifier("y"),
                    mutable: false,
                },
                type: Type(F64),
            },
        ],
        generic_params: [
            GenericParam {
                name: Identifier("T"),
            },
        ],
        return_type: NamedType(
            Identifier("T"),
        ),
        body: Block [
            Let {
                name: IdentifierBinding {
                    name: Identifier("z"),
                    mutable: false,
                },
                assignment: Add {
                    left: Identifier("x"),
                    right: Identifier("y"),
                },
            },
            Return(
                Identifier("z"),
            ),
        ],
    },
]
