crates/kaban-parser/tests/snapshots/statements__private_func_decl_with_no_generics_and_no_return_type.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: func foo(x: i32, y: f64) { let z = x + y; return z; }

Block [
    FuncDeclWithNoGeneric {
        is_pub: false,
        name: Identifier("foo"),
        params: [
            Param {
                binding: IdentifierBinding {
                    name: Identifier("x"),
                    mutable: false,
                },
                type: Type(I32),
            },
            Param {
                binding: IdentifierBinding {
                    name: Identifier("y"),
                    mutable: false,
                },
                type: Type(F64),
            },
        ],
        return_type: "NONE",
        body: Block [
            Let {
                name: IdentifierBinding {
                    name: Identifier("z"),
                    mutable: false,
                },
                assignment: Add {
                    left: Identifier("x"),
                    right: Identifier("y"),
                },
            },
            Return(
                Identifier("z"),
            ),
        ],
    },
]
