crates/kaban-parser/tests/snapshots/statements__private_func_decl_with_no_params_and_no_return_type.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: func foo() { }

Block [
    FuncDeclWithNoGeneric {
        is_pub: false,
        name: Identifier("foo"),
        params: [],
        return_type: "NONE",
        body: Block [],
    },
]
